objects/vlocity_cmt__FieldsLookupConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__FieldName__c</fullName>
        <description>Name of the field for which lookup icon will be shown</description>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Object_Name__c</fullName>
        <description>Object of the field</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Popup_Page_Id__c</fullName>
        <description>Id of the page which will be opened in the popup</description>
        <label>Popup Page Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FieldsLookupConfiguration</label>
</CustomObject>